Add copyright on footer.

--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
                 <div class="heart"></div>
             </div>
         </div>
+        <footer>
+            <p>©2018 Misaki Koonce</p>
+        </footer>
     </body>
 </html>
