--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
         <div class="question">
             <p>&#63;</p>
         </div>
- <!-- Cony -->
+        <!-- Cony -->
         <div class="container">
-            <div class="coface">
-                <div class="coears">
-                    <div class="coinner"></div>
+            <div class="co-face">
+                <div class="co-ears">
+                    <div class="co-inner"></div>
                 </div>
-                <div class="coears corightear">
-                    <div class="coinner corightinner">
+                <div class="co-ears co-rightear">
+                    <div class="co-inner co-rightinner">
                     </div>
                 </div>
-                <div class="conose">
-                    <div class="cobridge"></div>
-                    <div class="conmouth">
-                            <div class="mouthinner"></div>
+                <div class="co-nose">
+                    <div class="co-bridge"></div>
+                    <div class="co-mouth">
+                            <div class="mouth-inner"></div>
                     </div>
                 </div>
-                <div class="cocheeks">
+                <div class="co-cheeks">
                     <div></div>
                     <div></div>
                 </div>
-                <div class="coeyes">
+                <div class="co-eyes">
                     <ul>
                         <li></li>
                         <li></li>
@@ -58,7 +58,6 @@
             </div>
             <div class="love">
                 <p>Love you</p>
-                <div class="smallheart"></div>
                 <div class="heart"></div>
             </div>
         </div>
