Style: Fix position relative and absolute.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Brown</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
@@ -32,12 +33,15 @@
         <!-- Cony -->
         <div class="container">
             <div class="co-face">
-                <div class="co-ears">
-                    <div class="co-inner"></div>
-                </div>
-                <div class="co-ears co-rightear">
-                    <div class="co-inner co-rightinner">
-                    </div>
+                <div class="co-ear-container">
+                    <ul>
+                        <li class="co-ears"></li>
+                        <li class="co-ears"></li>
+                    </ul>
+                    <ul>
+                        <li class="co-inner"></li>
+                        <li class="co-inner"></li>
+                    </ul>
                 </div>
                 <div class="co-nose">
                     <div class="co-bridge"></div>
@@ -45,10 +49,10 @@
                             <div class="mouth-inner"></div>
                     </div>
                 </div>
-                <div class="co-cheeks">
-                    <div></div>
-                    <div></div>
-                </div>
+                <ul>
+                    <li class="co-cheeks"></li>
+                    <li class="co-cheeks"></li>
+                </ul>
                 <div class="co-eyes">
                     <ul>
                         <li></li>
